@@ -1,8 +1,15 @@
+package Base;
+
+import Interface.Movable;
+import Interface.Vehicle;
+import Interface.Engine;
+
 import java.awt.*;
 import java.util.ArrayList;
 
-class Truck implements Movable,Vehicle, ITruck{
-    protected Engine engine;
+public class Car implements Movable, Vehicle {
+    // variabler
+    public Engine engine;
     protected int nrDoors; // Number of doors on the car
     protected double enginePower; // Engine power of the car
     protected double currentSpeed; // The current speed of the car
@@ -10,10 +17,11 @@ class Truck implements Movable,Vehicle, ITruck{
     protected String modelName; // The car model name
     protected double posX;
     protected double posY;
-    protected double direction;
     protected ArrayList<Double> pos;
+    protected double direction;
+    protected int carSize;
 
-    public Truck(Engine engine,  int nrDoors, double enginePower, Color color, String modelName){
+    public Car(Engine engine, int nrDoors, double enginePower, Color color, String modelName, int carSize){
         this.engine = engine;
         this.nrDoors = nrDoors;
         this.enginePower = enginePower;
@@ -23,14 +31,20 @@ class Truck implements Movable,Vehicle, ITruck{
         this.posX = 0.0;
         this.posY = 0.0;
         this.direction = 0;
+        this.carSize = carSize;
         this.pos = new ArrayList<>(2);
         pos.add(0, 0.0);
         pos.add(1, 0.0);
         stopEngine();
     }
 
+    // funktioner
     public int getNrDoors() {
         return nrDoors;}
+
+    public int getCarSize(){
+        return carSize;
+    }
 
     public double getEnginePower() {
         return enginePower;}
@@ -90,6 +104,11 @@ class Truck implements Movable,Vehicle, ITruck{
         direction = ((getDirection() - 1)%4 +4) % 4; // kan inte ha modulo på ett negativt tal
     }
 
+    public  void updatePosition(double x, double y){
+        posX = x;
+        posY = y;
+    }
+
     public ArrayList<Double> getPosition(){
         pos.set(0, posX);
         pos.set(1, posY);
@@ -104,14 +123,15 @@ class Truck implements Movable,Vehicle, ITruck{
             posY = pos.get(1) + getCurrentSpeed();
         }
         else if (dir == 1){
-            posX = pos.getFirst() + getCurrentSpeed();
+            posX = pos.get(0) + getCurrentSpeed();
         }
         else if (dir == 2){
             posY = pos.get(1) - getCurrentSpeed();
         }
         else {
-            posX = pos.getFirst() - getCurrentSpeed();
+            posX = pos.get(0) - getCurrentSpeed();
         }
     }
+
 }
 
